delet breake after start end shavasana

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                 <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
               </label>
-              <label for="" class="time-label">
+              <label for="" class="time-label unvisible">
                 break, minutes:
 
                 <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
@@ -1400,7 +1400,7 @@
                 asana minutes:
                 <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
               </label>
-              <label class="time-label" for="">
+              <label class="time-label unvisible" for="">
                 break minutes:
                 <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
               </label>
